fix(pattern): close final library review findings